@@ -1,17 +1,12 @@
 package com.remoteclassroom.backend.service;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
+import java.util.*;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.client.RestClientException;
+
 import lombok.extern.slf4j.Slf4j;
 
 @Service
@@ -27,172 +22,191 @@ public class AIService {
     private final RestTemplate restTemplate;
 
     public AIService() {
-        org.springframework.http.client.SimpleClientHttpRequestFactory factory = new org.springframework.http.client.SimpleClientHttpRequestFactory();
+        var factory = new org.springframework.http.client.SimpleClientHttpRequestFactory();
         factory.setConnectTimeout(10000);
         factory.setReadTimeout(20000);
         this.restTemplate = new RestTemplate(factory);
     }
 
+    // =========================
+    // ✅ DOUBT API (STABLE)
+    // =========================
     public String getAnswer(String question, String language) {
-        if (apiKey == null || apiKey.trim().isEmpty()) {
-            log.error("Gemini API key is missing");
-            return "⚠️ Service temporarily unavailable. Please try again later.";
+
+        if (apiKey == null || apiKey.isBlank()) {
+            log.error("Gemini API key missing");
+            return "AI service not configured.";
         }
 
-        if (question == null || question.trim().isEmpty()) {
-            return "Please provide a valid doubt question.";
+        if (question == null || question.isBlank()) {
+            return "Please ask a valid question.";
         }
 
         String prompt = """
-You are an expert, encouraging AI teacher.
+You are a helpful AI teacher.
 
-A student has asked the following doubt. Please explain it clearly in %s.
+Explain clearly in %s.
+Give short explanation + 1 example.
 
-Guidelines for your response:
-1. Structure: Use markdown format. Use bolding to highlight keywords. Draw clear bullet points to make it extremely readable.
-2. Clarity: Avoid overly complex jargon. Keep sentences concise.
-3. Examples: Always provide exactly one simple real-world or code example to solidify the concept.
-4. Tone: Be friendly, professional, and directly address the student.
-
-Question from Student:
+Question:
 %s
 """.formatted(language != null ? language : "English", question);
 
         try {
-            return callGeminiCore(prompt);
+            String response = callGeminiWithRetry(prompt);
+
+            if (response == null || response.isBlank()) {
+                return "⚠️ AI returned empty response. Try again.";
+            }
+
+            return response;
+
         } catch (Exception e) {
-            log.error("Doubt API Error after retries: {}", e.getMessage());
-            return "⚠️ Server busy. Please try again in a few seconds.";
+            log.error("AI doubt failed: {}", e.getMessage());
+            return "⚠️ AI busy. Try again.";
         }
     }
 
+    // =========================
+    // ✅ QUIZ API (STABLE)
+    // =========================
     public String generateQuiz(String transcript, String difficulty, String weakTopic) {
+
         if (transcript == null || transcript.isBlank()) {
-            log.warn("Empty transcript provided for quiz generation");
-            return getFallbackQuiz("No transcript available to generate quiz.");
+            log.warn("Transcript empty → fallback quiz");
+            return fallbackQuiz();
         }
 
         String prompt = """
-You are an expert teacher.
-
-Generate EXACTLY 10 MCQs in English.
+Generate 10 MCQs in JSON.
 
 Difficulty: %s
-%s
 
-Rules:
-- Questions must be clear and concept-based
-- Avoid random questions
-
-STRICT JSON FORMAT:
+Format:
 [
-  {
-    "question": "string",
-    "options": ["A","B","C","D"],
-    "correctAnswer": "exact match",
-    "topic": "short topic"
-  }
+ { "question":"", "options":["A","B","C","D"], "correctAnswer":"", "topic":"" }
 ]
-
-Return ONLY JSON.
 
 Lecture:
 %s
-""".formatted(
-                difficulty,
-                (weakTopic != null && !weakTopic.isBlank() ? "Focus MORE on weak topic: " + weakTopic : ""),
-                transcript
-        );
+""".formatted(difficulty, transcript);
 
         try {
-            String rawResponse = callGeminiCore(prompt);
-            return cleanJson(rawResponse);
+            String response = callGeminiWithRetry(prompt);
+
+            if (response == null || response.isBlank()) {
+                log.warn("Empty AI quiz response → fallback");
+                return fallbackQuiz();
+            }
+
+            return clean(response);
+
         } catch (Exception e) {
-            log.error("Quiz generation failed after retries: {}", e.getMessage());
-            return getFallbackQuiz("An error occurred generating an adaptive quiz.");
+            log.error("Quiz generation failed: {}", e.getMessage());
+            return fallbackQuiz();
         }
     }
 
-    private String callGeminiCore(String prompt) throws Exception {
-        int maxRetries = 2;
-        int attempt = 0;
-        Exception lastException = null;
+    // =========================
+    // 🔥 RETRY LOGIC (CRITICAL FIX)
+    // =========================
+    private String callGeminiWithRetry(String prompt) throws Exception {
 
-        while (attempt <= maxRetries) {
+        int attempts = 0;
+        int maxAttempts = 2;
+
+        while (attempts < maxAttempts) {
             try {
-                log.info("Calling Gemini API (Attempt {}/{})", attempt + 1, maxRetries + 1);
-                
-                Map<String, Object> part = new HashMap<>();
-                part.put("text", prompt);
+                return callGemini(prompt);
+            } catch (RestClientException e) {
+                attempts++;
+                log.warn("Gemini retry {} due to error: {}", attempts, e.getMessage());
 
-                Map<String, Object> content = new HashMap<>();
-                content.put("parts", List.of(part));
-
-                Map<String, Object> request = new HashMap<>();
-                request.put("contents", List.of(content));
-
-                HttpHeaders headers = new HttpHeaders();
-                headers.setContentType(MediaType.APPLICATION_JSON);
-
-                HttpEntity<Map<String, Object>> entity = new HttpEntity<>(request, headers);
-
-                ResponseEntity<Map> response = restTemplate.exchange(
-                        GEMINI_URL + apiKey,
-                        HttpMethod.POST,
-                        entity,
-                        Map.class
-                );
-
-                String text = extractText(response);
-                if (text == null || text.equals("[]")) {
-                    throw new RuntimeException("Empty response from AI");
+                if (attempts >= maxAttempts) {
+                    throw e;
                 }
-                return text;
 
-            } catch (Exception e) {
-                attempt++;
-                lastException = e;
-                log.warn("Gemini API attempt {} failed: {}", attempt, e.getMessage());
-                if (attempt <= maxRetries) {
-                    Thread.sleep(1000 * attempt); // Exponential backoff
-                }
+                Thread.sleep(1000); // small delay
             }
         }
-        throw lastException;
+
+        return null;
     }
 
-    private String extractText(ResponseEntity<Map> response) {
-        if (response.getBody() == null) return "[]";
-        List<Map<String, Object>> candidates = (List<Map<String, Object>>) response.getBody().get("candidates");
-        if (candidates == null || candidates.isEmpty()) return "[]";
-        Map<String, Object> first = candidates.get(0);
-        Map<String, Object> content = (Map<String, Object>) first.get("content");
-        if (content == null) return "[]";
-        List<Map<String, Object>> parts = (List<Map<String, Object>>) content.get("parts");
-        if (parts == null || parts.isEmpty()) return "[]";
-        return parts.get(0).get("text").toString();
+    // =========================
+    // 🔥 CORE API CALL
+    // =========================
+    private String callGemini(String prompt) throws Exception {
+
+        Map<String, Object> body = Map.of(
+                "contents", List.of(Map.of(
+                        "parts", List.of(Map.of("text", prompt))
+                ))
+        );
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+
+        ResponseEntity<Map> response = restTemplate.exchange(
+                GEMINI_URL + apiKey,
+                HttpMethod.POST,
+                new HttpEntity<>(body, headers),
+                Map.class
+        );
+
+        if (response.getBody() == null) {
+            throw new RuntimeException("Empty response from Gemini");
+        }
+
+        return extract(response);
     }
 
-    private String cleanJson(String text) {
-        if (text == null) return "[]";
-        return text
-                .replace("```json", "")
+    // =========================
+    // 🔥 SAFE EXTRACT (CRASH FIX)
+    // =========================
+    private String extract(ResponseEntity<Map> res) {
+        try {
+            var body = res.getBody();
+
+            if (body == null || !body.containsKey("candidates")) {
+                log.error("Invalid Gemini response structure");
+                return "";
+            }
+
+            var candidates = (List<Map>) body.get("candidates");
+
+            if (candidates.isEmpty()) return "";
+
+            var content = (Map) candidates.get(0).get("content");
+            var parts = (List<Map>) content.get("parts");
+
+            if (parts.isEmpty()) return "";
+
+            return parts.get(0).get("text").toString();
+
+        } catch (Exception e) {
+            log.error("Failed to extract Gemini response: {}", e.getMessage());
+            return "";
+        }
+    }
+
+    // =========================
+    // 🔥 CLEAN JSON
+    // =========================
+    private String clean(String text) {
+        return text.replace("```json", "")
                 .replace("```", "")
-                .replace("\n", "")
-                .replace("\r", "")
                 .trim();
     }
 
-    private String getFallbackQuiz(String message) {
+    // =========================
+    // 🔥 FALLBACK QUIZ
+    // =========================
+    private String fallbackQuiz() {
         return """
 [
-  {
-    "question": "%s",
-    "options": ["A", "B", "C", "D"],
-    "correctAnswer": "A",
-    "topic": "Fallback"
-  }
+ { "question":"Fallback question", "options":["A","B","C","D"], "correctAnswer":"A", "topic":"Fallback" }
 ]
-""".formatted(message);
+""";
     }
 }
