@@ -3,13 +3,12 @@ package com.remoteclassroom.backend.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.cache.annotation.Cacheable;
-import org.springframework.cache.annotation.CacheEvict;
 
 import com.remoteclassroom.backend.model.Quiz;
 import com.remoteclassroom.backend.model.Video;
 import com.remoteclassroom.backend.repository.QuizRepository;
 import com.remoteclassroom.backend.repository.VideoRepository;
+
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
@@ -35,42 +34,55 @@ public class QuizService {
 
     private final Map<Long, Boolean> activeGenerations = new ConcurrentHashMap<>();
 
+    // ✅ GENERATE QUIZ (SAFE + PRODUCTION)
     @Transactional
-    @CacheEvict(value = "quiz", key = "#videoId")
     public com.remoteclassroom.backend.dto.QuizDTO generateAndSaveQuiz(Long videoId) {
+
         if (videoId == null) {
             throw new IllegalArgumentException("Video ID cannot be null");
         }
 
+        // 🔒 prevent duplicate generation (NO CRASH)
         if (activeGenerations.putIfAbsent(videoId, true) != null) {
-            log.warn("Quiz generation already in progress for video: {}", videoId);
-            throw new RuntimeException("Quiz generation already in progress for this video.");
+            log.warn("Quiz generation already running for video {}", videoId);
+
+            // return existing instead of crashing
+            return getQuizByVideo(videoId)
+                    .orElseThrow(() -> new RuntimeException("Quiz is being generated. Try again."));
         }
 
-        long startTime = System.currentTimeMillis();
         try {
             Video video = videoRepository.findById(videoId)
                     .orElseThrow(() -> new RuntimeException("Video not found"));
 
-            String transcript = video.getTranscript();
-            if (transcript == null || transcript.isBlank()) {
-                log.warn("Transcript missing for video: {}. Using fallback.", videoId);
-                transcript = "This is a lecture about " + video.getTitle();
+            // ✅ RETURN EXISTING QUIZ
+            List<Quiz> existing = quizRepository.findByVideo_IdOrderByCreatedAtDesc(videoId);
+            if (!existing.isEmpty()) {
+                return mapToDTO(existing.get(0));
             }
 
-            log.info("Starting AI quiz generation for video: {}", videoId);
-            String questionsJson = aiService.generateQuiz(transcript, "MEDIUM", null);
-            
-            int questionCount = 0;
-            try {
-                com.fasterxml.jackson.databind.JsonNode root = objectMapper.readTree(questionsJson);
-                if (root.isArray()) {
-                    questionCount = root.size();
-                }
-            } catch (Exception e) {
-                log.error("Failed to parse AI JSON for video {}: {}", videoId, e.getMessage());
-                questionCount = 1;
+            String transcript = video.getTranscript();
+            if (transcript == null || transcript.isBlank()) {
+                transcript = "Lecture about " + video.getTitle();
             }
+
+            String questionsJson;
+
+            try {
+                questionsJson = aiService.generateQuiz(transcript, "MEDIUM", null);
+            } catch (Exception e) {
+                log.error("AI generation failed: {}", e.getMessage());
+
+                // 🔥 fallback (VERY IMPORTANT)
+                questionsJson = "[]";
+            }
+
+            if (questionsJson == null || questionsJson.isBlank()) {
+                log.warn("AI returned empty quiz for video {}", videoId);
+                questionsJson = "[]";
+            }
+
+            int questionCount = countQuestions(questionsJson);
 
             Quiz quiz = new Quiz();
             quiz.setVideo(video);
@@ -80,59 +92,81 @@ public class QuizService {
             quiz.setDifficulty("MEDIUM");
             quiz.setTotalQuestions(questionCount);
 
-            Quiz savedQuiz = quizRepository.save(quiz);
-            
-            long duration = System.currentTimeMillis() - startTime;
-            log.info("Quiz generated and saved in {}ms for video: {}", duration, videoId);
+            Quiz saved = quizRepository.save(quiz);
 
-            return new com.remoteclassroom.backend.dto.QuizDTO(
-                    savedQuiz.getId(), video.getId(), video.getBatch().getId(),
-                    savedQuiz.getDifficulty(), parseJson(savedQuiz.getQuestionsJson()),
-                    savedQuiz.getTotalQuestions(), savedQuiz.getCreatedAt()
-            );
+            return mapToDTO(saved);
+
         } finally {
             activeGenerations.remove(videoId);
         }
     }
 
+    // ✅ FETCH QUIZ
     @Transactional(readOnly = true)
-    @Cacheable(value = "quiz", key = "#videoId")
     public Optional<com.remoteclassroom.backend.dto.QuizDTO> getQuizByVideo(Long videoId) {
-        log.info("Fetching latest quiz for video: {}", videoId);
+
         List<Quiz> quizzes = quizRepository.findByVideo_IdOrderByCreatedAtDesc(videoId);
-        if (quizzes.isEmpty()) {
-            return Optional.empty();
-        }
-        Quiz q = quizzes.get(0);
-        return Optional.of(new com.remoteclassroom.backend.dto.QuizDTO(
-                q.getId(), q.getVideo().getId(), q.getBatch().getId(),
-                q.getDifficulty(), parseJson(q.getQuestionsJson()),
-                q.getTotalQuestions(), q.getCreatedAt()
-        ));
+
+        if (quizzes.isEmpty()) return Optional.empty();
+
+        return Optional.of(mapToDTO(quizzes.get(0)));
     }
 
+    // ✅ FIXED BATCH FETCH
     @Transactional(readOnly = true)
     public List<com.remoteclassroom.backend.dto.QuizDTO> getQuizzesByBatch(Long batchId) {
-        return quizRepository.findByBatchId(batchId).stream()
-                .map(q -> new com.remoteclassroom.backend.dto.QuizDTO(
-                        q.getId(), q.getVideo().getId(), q.getBatch().getId(),
-                        q.getDifficulty(), parseJson(q.getQuestionsJson()),
-                        q.getTotalQuestions(), q.getCreatedAt()
-                ))
-                .collect(java.util.stream.Collectors.toList());
+
+        return quizRepository.findByBatchId(batchId) // ✅ FIX HERE
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
     }
 
+    // ✅ SAFE JSON PARSE
     private Object parseJson(String json) {
         try {
-            return objectMapper.readTree(json);
+            if (json == null || json.isBlank()) {
+                return java.util.Collections.emptyList();
+            }
+
+            var node = objectMapper.readTree(json);
+
+            if (!node.isArray()) {
+                log.warn("Quiz JSON is not array");
+                return java.util.Collections.emptyList();
+            }
+
+            return node;
+
         } catch (Exception e) {
-            log.warn("JSON parse failed, returning raw string: {}", e.getMessage());
-            return json;
+            log.error("JSON parse failed: {}", e.getMessage());
+            return java.util.Collections.emptyList();
         }
     }
 
-    @Transactional
-    public Quiz saveQuiz(Quiz quiz) {
-        return quizRepository.save(quiz);
+    private int countQuestions(String json) {
+        try {
+            var node = objectMapper.readTree(json);
+            return node.isArray() ? node.size() : 0;
+        } catch (Exception e) {
+            return 0;
+        }
+    }
+
+    // ✅ SAFE DTO
+    private com.remoteclassroom.backend.dto.QuizDTO mapToDTO(Quiz q) {
+
+        Long videoId = q.getVideo() != null ? q.getVideo().getId() : null;
+        Long batchId = q.getBatch() != null ? q.getBatch().getId() : null;
+
+        return new com.remoteclassroom.backend.dto.QuizDTO(
+                q.getId(),
+                videoId,
+                batchId,
+                q.getDifficulty(),
+                parseJson(q.getQuestionsJson()),
+                q.getTotalQuestions(),
+                q.getCreatedAt()
+        );
     }
 }
